@@ -8,15 +8,30 @@
 #define MAGICK_IMPLEMENTATION
 
 #include "Magick++/CoderInfo.h"
+#include "Magick++/Exception.h"
+#include "Magick++/Include.h"
 
 Magick::CoderInfo::CoderInfo ( const std::string &name_ )
-  : _magickInfo( 0 )
+  : _name(),
+    _description(),
+    _isReadable(false),
+    _isWritable(false),
+    _isMultiFrame(false)
 {
   ExceptionInfo exceptionInfo;
   GetExceptionInfo( &exceptionInfo );
-  _magickInfo = GetMagickInfo( name_.c_str(), &exceptionInfo );
+  Magick::MagickInfo *magickInfo = GetMagickInfo( name_.c_str(), &exceptionInfo );
+  throwException( exceptionInfo );
+  if( !magickInfo )
+    throwExceptionExplicit(OptionError,
+                           "Coder not found",
+                           name_.c_str() );
 
-  // FIXME: handle error case
+  _name         = string(magickInfo->name);
+  _description  = string(magickInfo->description);
+  _isReadable   = static_cast<bool>(magickInfo->decoder);
+  _isWritable   = static_cast<bool>(magickInfo->encoder);
+  _isMultiFrame = static_cast<bool>(magickInfo->adjoin);
 }
 
 Magick::CoderInfo::~CoderInfo ( void )
@@ -27,29 +42,41 @@ Magick::CoderInfo::~CoderInfo ( void )
 // Format name
 std::string Magick::CoderInfo::name( void ) const
 {
-  return string(_magickInfo->name);
+  return _name;
 }
 
 // Format description
 std::string Magick::CoderInfo::description( void ) const
 {
-  return string(_magickInfo->description);
+  return _description;
 }
 
 // Format is readable
 bool Magick::CoderInfo::isReadable( void ) const
 {
-  return static_cast<bool>(_magickInfo->decoder);
+  return _isReadable;
 }
 
 // Format is writeable
 bool Magick::CoderInfo::isWritable( void ) const
 {
-  return static_cast<bool>(_magickInfo->encoder);
+  return _isWritable;
 }
 
 // Format supports multiple frames
 bool Magick::CoderInfo::isMultiFrame( void ) const
 {
-  return static_cast<bool>(_magickInfo->adjoin);
+  return _isMultiFrame;
 }
+
+// Construct from MagickLib::MagickInfo*
+Magick::CoderInfo::CoderInfo ( const MagickLib::MagickInfo *magickInfo_ )
+  : _name(string(magickInfo_->name)),
+    _description(string(magickInfo_->description)),
+    _isReadable(static_cast<bool>(magickInfo_->decoder)),
+    _isWritable(static_cast<bool>(magickInfo_->encoder)),
+    _isMultiFrame(static_cast<bool>(magickInfo_->adjoin))
+{
+  // Nothing more to do
+}
+
